--- a/front-end/src/components/global.css
+++ b/front-end/src/components/global.css
@@ -1,3 +1,7 @@
 body {
     background-color: rgb(230, 230, 230) !important;
 }
+
+.nice-shadow {
+    box-shadow: 0 0.25rem 0.25rem rgb(0 0 0 / 25%), inset 0 -1px 5px rgb(0 0 0 / 25%);
+}
